<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_marks"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hr.fer.oo.ednevnik.main.MarksActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/table_marks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stretchColumns="0">

                <TableRow>

                    <TextView
                        android:background="@drawable/border_for_cell"
                        android:paddingStart="5dp"
                        android:text="@string/category"/>

                    <TextView
                        android:width="30dp"
                        android:background="@drawable/border_for_cell"
                        android:gravity="center"
                        android:text="@string/ix"/>

                    <TextView
                        android:width="30dp"
                        android:background="@drawable/border_for_cell"
                        android:gravity="center"
                        android:text="@string/x"/>

                    <TextView
                        android:width="30dp"
                        android:background="@drawable/border_for_cell"
                        android:gravity="center"
                        android:text="@string/xi"/>

                    <TextView
                        android:width="30dp"
                        android:background="@drawable/border_for_cell"
                        android:gravity="center"
                        android:text="@string/xii"/>

                    <TextView
                        android:width="30dp"
                        android:background="@drawable/border_for_cell"
                        android:gravity="center"
                        android:text="@string/i"/>

                    <TextView
                        android:width="30dp"
                        android:background="@drawable/border_for_cell"
                        android:gravity="center"
                        android:text="@string/ii"/>

                    <TextView
                        android:width="30dp"
                        android:background="@drawable/border_for_cell"
                        android:gravity="center"
                        android:text="@string/iii"/>

                    <TextView
                        android:width="30dp"
                        android:background="@drawable/border_for_cell"
                        android:gravity="center"
                        android:text="@string/iv"/>

                    <TextView
                        android:width="30dp"
                        android:background="@drawable/border_for_cell"
                        android:gravity="center"
                        android:text="@string/v"/>

                    <TextView
                        android:width="30dp"
                        android:background="@drawable/border_for_cell"
                        android:gravity="center"
                        android:text="@string/vi"/>

                </TableRow>
            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="15dp"></LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notes"/>

            <TableLayout
                android:id="@+id/table_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stretchColumns="*">

                <TableRow>

                    <TextView
                        android:background="@drawable/border_for_cell"
                        android:paddingStart="5dp"
                        android:text="@string/date"/>

                    <TextView
                        android:background="@drawable/border_for_cell"
                        android:paddingStart="5dp"
                        android:text="@string/note"/>


                </TableRow>
            </TableLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
