<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_marks_prof"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hr.fer.oo.ednevnik.main.MarksProfActivity">

    <LinearLayout
        android:id="@+id/buttons_l_l"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new"
            android:textSize="25dp"
            android:layout_margin="5dp"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_mark"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/mark"
                android:textAllCaps="false"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/add_note"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/note"
                android:textAllCaps="false"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/add_absence"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/absence"
                android:textAllCaps="false"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttons_l_l"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/table_marks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stretchColumns="0">

                <TableRow>

                    <TextView
                        android:background="@drawable/border_for_cell"
                        android:paddingStart="5dp"
                        android:text="@string/category"/>

                    <TextView
                        android:width="30dp"
                        android:background="@drawable/border_for_cell"
                        android:gravity="center"
                        android:text="@string/ix"/>

                    <TextView
                        android:width="30dp"
                        android:background="@drawable/border_for_cell"
                        android:gravity="center"
                        android:text="@string/x"/>

                    <TextView
                        android:width="30dp"
                        android:background="@drawable/border_for_cell"
                        android:gravity="center"
                        android:text="@string/xi"/>

                    <TextView
                        android:width="30dp"
                        android:background="@drawable/border_for_cell"
                        android:gravity="center"
                        android:text="@string/xii"/>

                    <TextView
                        android:width="30dp"
                        android:background="@drawable/border_for_cell"
                        android:gravity="center"
                        android:text="@string/i"/>

                    <TextView
                        android:width="30dp"
                        android:background="@drawable/border_for_cell"
                        android:gravity="center"
                        android:text="@string/ii"/>

                    <TextView
                        android:width="30dp"
                        android:background="@drawable/border_for_cell"
                        android:gravity="center"
                        android:text="@string/iii"/>

                    <TextView
                        android:width="30dp"
                        android:background="@drawable/border_for_cell"
                        android:gravity="center"
                        android:text="@string/iv"/>

                    <TextView
                        android:width="30dp"
                        android:background="@drawable/border_for_cell"
                        android:gravity="center"
                        android:text="@string/v"/>

                    <TextView
                        android:width="30dp"
                        android:background="@drawable/border_for_cell"
                        android:gravity="center"
                        android:text="@string/vi"/>

                </TableRow>
            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="15dp"></LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notes"/>

            <TableLayout
                android:id="@+id/table_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stretchColumns="*">

                <TableRow>

                    <TextView
                        android:background="@drawable/border_for_cell"
                        android:paddingStart="5dp"
                        android:text="@string/date"/>

                    <TextView
                        android:background="@drawable/border_for_cell"
                        android:paddingStart="5dp"
                        android:text="@string/note"/>


                </TableRow>
            </TableLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
