<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="hr.fer.oo.ednevnik.main.ProfilFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student_first_name"
                android:textSize="22dp"/>

            <TextView
                android:id="@+id/profile_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="20dp"
                tools:text="@string/student_first_name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student_last_name"
                android:textSize="22dp"/>

            <TextView
                android:id="@+id/profile_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="20dp"
                tools:text="@string/student_last_name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student_birth_date"
                android:textSize="22dp"/>

            <TextView
                android:id="@+id/profile_birth_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="20dp"
                tools:text="@string/student_birth_date"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student_oib"
                android:textSize="22dp"/>

            <TextView
                android:id="@+id/profile_oib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="20dp"
                tools:text="@string/student_oib"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="22dp"/>

            <TextView
                android:id="@+id/profil_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="22dp"
                tools:text="@string/address"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student_city"
                android:textSize="22dp"/>

            <TextView
                android:id="@+id/profile_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="20dp"
                tools:text="@string/student_city"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student_mail"
                android:textSize="22dp"/>

            <TextView
                android:id="@+id/profile_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                tools:text="@string/student_mail"/>


        </LinearLayout>

    </ScrollView>

</FrameLayout>
