<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="hr.fer.oo.ednevnik.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily=""
                android:text="@string/welcome_to"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/e_dnevnik_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:text="@string/app_name"
                android:textColor="@color/orange"
                android:textSize="30sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_text"
                style="@style/EditTextCustom"
                android:theme="@style/EditTextCustom"/>

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_text"
                android:inputType="textPassword"
                style="@style/EditTextCustom"
                android:theme="@style/EditTextCustom"/>

            <Spinner
                android:id="@+id/role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/role_arrays"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"/>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="80dp"
                android:layout_height="25dp"
                android:layout_gravity="end"
                android:background="@drawable/login_btn"
                android:text="@string/login_text"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
    </LinearLayout>

</ScrollView>
